# DSForces.jl

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yml
dsforces/: __init__.py  cli.py  core.py
tests/: test_dsforces.py
